--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
     "hdkey": "^2.0.1",
     "history": "^5.0.0",
     "react": "^17.0.2",
